--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/circle-cropped.ico"
+      type="image/x-icon"
+    />
     <title>Frontend Mentor | Four card feature section</title>
   </head>
   <body>
